Add More Themes

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -29,8 +29,11 @@
             <div class="setting-separator">:</div>
           </label>
           <select id="theme-select" class="setting-dropdown" data-key="theme">
-            <option value="night-owl">Night Owl</option>
             <option value="classic-light">Classic Light</option>
+            <option value="classic-dark">Classic Dark</option>
+            <option value="modern-light">Modern Light</option>
+            <option value="modern-dark">Modern Dark</option>
+            <option value="night-owl">Night Owl</option>
           </select>
         </div>
 
