--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -23,18 +23,30 @@
       </div>
 
       <div id="settings">
-        <div id="theme" class="setting normal dropdown">
-          <label for="theme-select" class="setting-title">
-            <div class="setting-name">Theme</div>
-            <div class="setting-separator">:</div>
-          </label>
-          <select id="theme-select" class="setting-dropdown" data-key="theme">
-            <option value="classic-light">Classic Light</option>
-            <option value="classic-dark">Classic Dark</option>
-            <option value="modern-light">Modern Light</option>
-            <option value="modern-dark">Modern Dark</option>
-            <option value="night-owl">Night Owl</option>
-          </select>
+        <div class="settings-container vertical-settings-container">
+          <div id="theme" class="setting normal dropdown">
+            <label for="theme-select" class="setting-title">
+              <div class="setting-name">Theme</div>
+              <div class="setting-separator">:</div>
+            </label>
+            <select id="theme-select" class="setting-dropdown" data-key="theme">
+              <option value="zoho-default-light">Zoho Default Light</option>
+              <option value="zoho-default-dark">Zoho Default Dark</option>
+              <option value="night-owl">Night Owl</option>
+            </select>
+          </div>
+
+          <div id="style" class="setting small dropdown">
+            <label for="style-select" class="setting-title">
+              <div class="setting-name">Style</div>
+              <div class="setting-separator">:</div>
+            </label>
+            <select id="style-select" class="setting-dropdown" data-key="style">
+              <option value="classic">Classic</option>
+              <option value="simplified">Simplified</option>
+              <option value="minimalist">Minimalist</option>
+            </select>
+          </div>
         </div>
 
         <div class="settings-container vertical-settings-container">
