Improve Pro Syntax Highlighting

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -190,11 +190,11 @@
             </div>
           </div>
 
-          <div id="pro-syntax-higliting" class="setting normal switch">
+          <div id="pro-syntax-highlighting" class="setting normal switch">
             <div class="setting-title">
-              <div class="setting-name">Pro Syntax Higliting</div>
+              <div class="setting-name">Pro Syntax Highlighting</div>
             </div>
-            <div id="pro-syntax-higliting-switch" class="setting-switch" data-key="pro-syntax-higliting-switch">
+            <div id="pro-syntax-highlighting-switch" class="setting-switch" data-key="pro-syntax-highlighting-switch">
               <div class="toggle-switch toggle-on">
                 <div class="toggle-switch-text-off">OFF</div>
                 <div class="glow-comp"></div>
