Add More Themes

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -32,6 +32,8 @@
             <select id="theme-select" class="setting-dropdown" data-key="theme">
               <option value="zoho-default-light">Zoho Default Light</option>
               <option value="zoho-default-dark">Zoho Default Dark</option>
+              <option value="visual-studio-light">Visual Studio Light</option>
+              <option value="visual-studio-dark">Visual Studio Dark</option>
               <option value="night-owl">Night Owl</option>
             </select>
           </div>
