--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -34,6 +34,9 @@
               <option value="zoho-default-dark">Zoho Default Dark</option>
               <option value="visual-studio-light">Visual Studio Light</option>
               <option value="visual-studio-dark">Visual Studio Dark</option>
+              <option value="github-light">GitHub Light</option>
+              <option value="github-dark">GitHub Dark</option>
+              <option value="github-black">GitHub Black</option>
               <option value="night-owl">Night Owl</option>
             </select>
           </div>
