Add More Themes

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -37,7 +37,17 @@
               <option value="github-light">GitHub Light</option>
               <option value="github-dark">GitHub Dark</option>
               <option value="github-black">GitHub Black</option>
+              <option value="atom-one-light">Atom One Light</option>
+              <option value="atom-one-dark">Atom One Dark</option>
+              <option value="dracula">Dracula</option>
+              <option value="winter-is-coming">Winter is Coming</option>
+              <option value="monokai-pro">Monokai Pro</option>
               <option value="night-owl">Night Owl</option>
+              <option value="shades-of-purple">Shades of Purple</option>
+              <option value="synthwave-84">SynthWave '84</option>
+              <option value="palenight">Palenight</option>
+              <option value="cobalt2">Cobalt2</option>
+              <option value="tokyo-night">Tokyo Night</option>
             </select>
           </div>
 
