Add More Themes

--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -48,6 +48,8 @@
               <option value="palenight">Palenight</option>
               <option value="cobalt2">Cobalt2</option>
               <option value="tokyo-night">Tokyo Night</option>
+              <option value="andromeda">Andromeda</option>
+              <option value="kanagawa">Kanagawa</option>
             </select>
           </div>
 
