--- a/scripts/popup/popup.html
+++ b/scripts/popup/popup.html
@@ -11,7 +11,7 @@
 
     <div id="extension-container">
       <div id="extension-header">
-        <div id="title">Zoho CRM Enhancer</div>
+        <div id="title">Zoho CRM DevTool</div>
         <div id="extension-activation-switch" data-key="extension-activation-switch">
           <div class="toggle-switch toggle-on">
             <div class="toggle-switch-text-off">OFF</div>
